# Ur3e-experimental-setup

./: .gitignore  README.md  a.sh
bota_ws/src/bota_driver/bota_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/bota_driver_testing/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/bota_driver_testing/config/: rokubimini_sensor_test_1024.yaml  rokubimini_sensor_test_51.yaml  rokubimini_sensor_test_64.yaml  rokubimini_sensor_test_ft_offsets.yaml
bota_ws/src/bota_driver/bota_driver_testing/launch/: bota_driver_testing_boot_async.test  bota_driver_testing_boot_async.test.py  bota_driver_testing_boot_sync.test  bota_driver_testing_boot_sync.test.py  bota_driver_testing_ft_offsets_async.test  bota_driver_testing_ft_offsets_sync.test  bota_driver_testing_hz_128_async.test  bota_driver_testing_hz_128_sync.test  bota_driver_testing_hz_256_async.test  bota_driver_testing_hz_256_sync.test  bota_driver_testing_hz_512_async.test  bota_driver_testing_hz_512_sync.test  bota_driver_testing_hz_64_async.test  bota_driver_testing_hz_64_sync.test  bota_driver_testing_param_ethercat.test  bota_driver_testing_param_serial.test  bota_driver_testing_reset_service_async.test  bota_driver_testing_reset_service_sync.test  bota_driver_testing_signal_quality_1000_hz.test  bota_driver_testing_signal_quality_50_hz.test  bota_driver_testing_signal_quality_imu.test  ft_offsets_ethercat.test.py  ft_offsets_serial.test.py  reset_service_ethercat.test.py  reset_service_serial.test.py  reset_service_zero_ethercat.test.py  reset_service_zero_serial.test.py  signal_quality_1000_hz_ethercat.test.py  signal_quality_1000_hz_serial.test.py  signal_quality_50_hz_ethercat.test.py  signal_quality_50_hz_serial.test.py  signal_quality_imu.test.py
bota_ws/src/bota_driver/bota_driver_testing/src/: TestBotaDriverBoot.cpp  TestBotaDriverFTOffsets.cpp  TestBotaDriverResetService.cpp  TestBotaDriverSignalQuality.cpp  TestBotaDriverSignalQualityImu.cpp  main.cpp
bota_ws/src/bota_driver/bota_node/bota_node/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bota_ws/src/bota_driver/bota_node/bota_node/src/: Node.cpp
bota_ws/src/bota_driver/bota_node/bota_node/test/: EmptyTests.cpp
bota_ws/src/bota_driver/bota_node/bota_signal_handler/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bota_ws/src/bota_driver/bota_node/bota_signal_handler/src/: SignalHandler.cpp
bota_ws/src/bota_driver/bota_node/bota_worker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bota_ws/src/bota_driver/bota_node/bota_worker/src/: Rate.cpp  Worker.cpp  WorkerManager.cpp
bota_ws/src/bota_driver/bota_node/bota_worker/test/: RateTest.cpp
bota_ws/src/bota_driver/rokubimini/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/rokubimini/config/: rokubimini_sensor.yaml
bota_ws/src/bota_driver/rokubimini/include/rokubimini/: Reading.hpp  Rokubimini.hpp  Statusword.hpp
bota_ws/src/bota_driver/rokubimini/src/rokubimini/: Reading.cpp  Rokubimini.cpp  Statusword.cpp
bota_ws/src/bota_driver/rokubimini/test/: TestConfiguration.cpp  TestReading.cpp  TestRokubimini.cpp  TestStateEnum.cpp  TestStatusWord.cpp  main.cpp
bota_ws/src/bota_driver/rokubimini_bus_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/rokubimini_bus_manager/include/rokubimini_bus_manager/: BusManager.hpp
bota_ws/src/bota_driver/rokubimini_bus_manager/src/rokubimini_bus_manager/: BusManager.cpp
bota_ws/src/bota_driver/rokubimini_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/rokubimini_description/config/: view_sensor.rviz
bota_ws/src/bota_driver/rokubimini_description/launch/: view_sensor.launch
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_LAXS_M8/: mounting.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_MEDA_M8/: mounting.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_MEDS_M8/: mounting.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_MEGS_M8/: mounting.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_ROKA_M8/: mounting.STL  wrench.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_ROKS_M8/: mounting.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/BFT_SENS_M8/: mounting.STL
bota_ws/src/bota_driver/rokubimini_description/meshes/realsense_adapter/: Realsense_adapter_mounting.STL
bota_ws/src/bota_driver/rokubimini_description/urdf/: BFT_LAXS_ECAT_M8.urdf.xacro  BFT_LAXS_ECAT_M8_robot.urdf.xacro  BFT_LAXS_SER_M8.urdf.xacro  BFT_LAXS_SER_M8_robot.urdf.xacro  BFT_MEDA_ECAT_M8.urdf.xacro  BFT_MEDA_ECAT_M8_robot.urdf.xacro  BFT_MEDA_SER_M8.urdf.xacro  BFT_MEDA_SER_M8_robot.urdf.xacro  BFT_MEDS_ECAT_M8.urdf.xacro  BFT_MEDS_ECAT_M8_robot.urdf.xacro  BFT_MEDS_SER_M8.urdf.xacro  BFT_MEDS_SER_M8_robot.urdf.xacro  BFT_MEGS_ECAT_M8.urdf.xacro  BFT_MEGS_ECAT_M8_robot.urdf.xacro  BFT_MEGS_SER_M8.urdf.xacro  BFT_MEGS_SER_M8_robot.urdf.xacro  BFT_ROKA_ECAT_M8.urdf.xacro  BFT_ROKA_ECAT_M8_robot.urdf.xacro  BFT_ROKA_SER_M8.urdf.xacro  BFT_ROKA_SER_M8_robot.urdf.xacro  BFT_ROKS_ECAT_M8.urdf.xacro  BFT_ROKS_ECAT_M8_robot.urdf.xacro  BFT_ROKS_SER_M8.urdf.xacro  BFT_ROKS_SER_M8_robot.urdf.xacro  BFT_SENS_ECAT_M8.urdf.xacro  BFT_SENS_ECAT_M8_robot.urdf.xacro  BFT_SENS_ECAT_M8_robot_realsense.urdf.xacro  BFT_SENS_SER_M8.urdf.xacro  BFT_SENS_SER_M8_robot.urdf.xacro  realsense_adapter.urdf.xacro
bota_ws/src/bota_driver/rokubimini_ethercat/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/rokubimini_ethercat/launch/: rokubimini_ethercat.launch  rokubimini_ethercat.launch.py
bota_ws/src/bota_driver/rokubimini_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/rokubimini_msgs/msg/: Reading.msg
bota_ws/src/bota_driver/rokubimini_msgs/srv/: FirmwareUpdateEthercat.srv  ResetWrench.srv  SetSensorConfiguration.srv
bota_ws/src/bota_driver/rokubimini_serial/: CHANGELOG.rst  CMakeLists.txt  package.xml
bota_ws/src/bota_driver/rokubimini_serial/launch/: rokubimini_serial.launch  rokubimini_serial.launch.py
(+427 files in other folders)
