cmake_minimum_required(VERSION 3.5.1)
project(bota_driver)
if (NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 14)
endif ()
if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif ()

find_package(ament_cmake REQUIRED)
find_package(rokubimini REQUIRED)
find_package(rokubimini_bus_manager REQUIRED)
find_package(rokubimini_ethercat REQUIRED)
find_package(rokubimini_serial REQUIRED)
find_package(rokubimini_msgs REQUIRED)
ament_package()
