<?xml version="1.0"?>
<package format="2">
  <name>bota_driver_testing</name>
  <version>0.6.1</version>
  <description>ROS node for communicating with rokubimini sensors</description>

  <license>Apache 2.0</license>
  <url>http://wiki.ros.org/bota_driver</url>
  <maintainer email="sw-support@botasys.com">Bota Systems AG</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>bota_node</depend>
  <depend>rokubimini</depend>
  <depend>rokubimini_serial</depend>
  <depend>rokubimini_ethercat</depend>
  <depend>rokubimini_bus_manager</depend>
  <depend>rokubimini_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>gtest</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
