<?xml version="1.0"?>
<package format="3">
    <name>rokubimini_description</name>
    <version>0.6.1</version>
    <description>The rokubimini_description package</description>

    <maintainer email="sw-support@botasys.com">Bota Systems AG</maintainer>

    <license>Apache 2.0</license>
    <url>http://wiki.ros.org/bota_driver</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>xacro</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
