<?xml version="1.0"?>

<package format="2">
    <name>rokubimini_ethercat</name>
    <version>0.6.1</version>
    <description>Rokubimini Ethercat implementation.</description>

    <license>Apache 2.0</license>
    <url>http://wiki.ros.org/bota_driver</url>
    <maintainer email="sw-support@botasys.com">Bota Systems AG</maintainer>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rokubimini</depend>
    <depend>rokubimini_bus_manager</depend>
    <depend>rokubimini_msgs</depend>
    <depend>soem</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
